--- a/ui/src/app/cohort-search/demographics/demographics.component.html
+++ b/ui/src/app/cohort-search/demographics/demographics.component.html
@@ -141,8 +141,7 @@
     </button>
     <button type="submit"
       class="btn btn-primary"
-      (click)="finish.emit(true)"
-      [disabled]="demoForm.invalid || !hasSelection">
+      (click)="finish.emit(true)">
       Finish
     </button>
   </div>
