--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -5,10 +5,8 @@
     </div>
     <div *ngFor="let mod of modifiers; let i = index" [formGroupName]="mod.name">
       <label class="modifier-event-header" [for]="mod.name">{{ mod.label }}</label>
-        <div class="container">
-          <div class="row"  >
-            <div class="col col-lg-4">
-              <div class="">
+        <div class="modifier-container">
+              <div class="dropdown-width ">
                 <clr-dropdown >
                   <button type="button" class="btn btn-outline" clrDropdownTrigger>
                     <span *ngIf = "dropdownOption.selected[i] !== ''; else elseBlock">{{dropdownOption.selected[i]}}</span>
@@ -18,31 +16,39 @@
                     <clr-icon shape="caret down"></clr-icon>
                   </button>
                   <clr-dropdown-menu  clrPosition="bottom-left" *clrIfOpen>
-                    <button
-                            *ngFor="let opt of mod.operators"
-                            [value]="opt.value"
-                            (click)="selectChange(opt, i)"
-                            class="dropdown-item"
-                            type="button"
-                            clrDropdownItem>{{ opt.name}}</button>
+                      <button
+                              *ngFor="let opt of mod.operators"
+                              [value]="opt.value"
+                              (click)="selectChange(opt, i, $event, mod)"
+                              class="dropdown-item"
+                              type="button"
+                              clrDropdownItem>{{ opt.name}}</button>
                   </clr-dropdown-menu>
                 </clr-dropdown>
               </div>
-            </div>
-            <div class="col col-lg-2 ">
               <div class="">
                 <input *ngIf = "mod.inputType !== 'date'" class="modifier-event-indicator" formControlName="valueA" [type]="mod.inputType">
               </div>
               <div *ngIf = "mod.inputType === 'date'" >
                 <input class="modifier-calender" formControlName="valueA" [type]="mod.inputType" type="date" clrDate>
               </div>
-
-              <div class="" *ngIf="showValueB(mod.name)">
-                <input class="modifier-event-indicator"
-                       formControlName="valueB" [type]="mod.inputType">
-              </div>
+             <ng-container  *ngIf = "dropdownOption.selected[i] === 'Between'">
+               <div class="and-text">
+                 <div>and</div>
+               </div>
+               <div>
+                 <input *ngIf = "mod.inputType !== 'date'"  class="modifier-event-indicator"
+                        formControlName="valueB" [type]="mod.inputType">
+               </div>
+             </ng-container>
+          <ng-container *ngIf = "dropdownOption.selected[i] === 'Is Between'">
+            <div class="and-text" >
+              <div>and</div>
             </div>
-          </div>
+            <div>
+              <input *ngIf = "mod.inputType === 'date'" class="modifier-calender" formControlName="valueB" [type]="mod.inputType" type="date" clrDate>
+            </div>
+          </ng-container>
         </div>
     </div>
   </section>
@@ -53,6 +59,7 @@
       <button type="button"
               class="btn calculate-btn"
               (click)="requestPreview()"
+              [disabled] = "!formChanges"
               [clrLoading]="preview.get('requesting', false)">
         Calculate
       </button>
@@ -60,11 +67,11 @@
     <div class="spin-top-padding">
       <span *ngIf="preview.get('requesting')" class="spinner spinner-inline"> Loading...   </span>
     </div>
-    <div class="col-lg-8 text-padding" *ngIf="preview.get('count')">
+    <div class="col-lg-8 text-padding" *ngIf="preview.get('count') >= 0">
       <div class="result-text">
         Results
       </div>
-      <div >
+      <div>
         Number Participants:
         <span class="text-bold" *ngIf="!preview.get('requesting')">
              {{ preview.get('count', 0) }}
