--- a/ui/src/app/cohort-search/selection-info/selection-info.component.css
+++ b/ui/src/app/cohort-search/selection-info/selection-info.component.css
@@ -1,7 +1,8 @@
 .container {
   display: flex;
   width: 100%;
-  padding: 0.5rem 0.2rem;
+  padding-top: 0.2rem;
+  padding-left: 0.2rem;
 }
 
 .item-info {
