--- a/ui/src/app/cohort-search/selection-info/selection-info.component.html
+++ b/ui/src/app/cohort-search/selection-info/selection-info.component.html
@@ -9,10 +9,16 @@
   <span class="item-info">
     <small *ngIf="index > 0" class="font-weight-bold">OR</small>
     <small *ngIf="parameter.get('group')" class="text-muted">Group</small>
-    <small class="name">
+    <small class="name"
+           [popper]="codesPopper"
+           [popperTrigger]="'hover'"
+           [popperPlacement]="'bottom'">
       <strong *ngIf="parameter.get('type') !== criteriaTypes.PM && parameter.get('type') !== domainType.DRUG">{{ _type }}</strong>
       <span class="text-size text-muted">{{ name }}</span>
       <span class="text-muted">{{ attribute }}</span>
     </small>
   </span>
+  <popper-content #codesPopper>
+  <h3 [style.margin]="'0'">{{name}}</h3>
+  </popper-content>
 </div>
