RW-1088, RW-1089, RW-1090 PM selected header fixes

--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -80,6 +80,10 @@ button.tab.active {
   font-size:14px;
 }
 
+.tab-node{
+  border-bottom: 7px solid #216FB4;
+}
+
 .btn-link .btn, .btn.btn-link {
   font-size: 14px;
 }
