--- a/ui/src/app/cohort-search/selection-info/selection-info.component.html
+++ b/ui/src/app/cohort-search/selection-info/selection-info.component.html
@@ -19,6 +19,6 @@
     </small>
   </span>
   <popper-content #codesPopper>
-  <h3 [style.margin]="'0'">{{name}}</h3>
+  <p class="tooltip-text" [style.margin]="'0'">{{name}}</p>
   </popper-content>
 </div>
