--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -30,7 +30,7 @@
         <a href="https://mor.nlm.nih.gov/RxNav/" target="_blank">
           Explore
         </a>
-        drugs by brand names outside of AoU
+        drugs by brand names outside of All of Us
       </div>
       <button
         (click)="cancel()"
