--- a/ui/src/app/views/workspace/component.css
+++ b/ui/src/app/views/workspace/component.css
@@ -12,7 +12,7 @@
 
 .description-text {
   color: #333;
-  width: 40rem;
+  width: 89%;
   padding-top: 0.5rem;
 }
 
@@ -56,31 +56,27 @@ h3 {
   color: #565656;
 }
 
-
-
 .btn.btn-primary.btn-create {
   width: max-content;
 }
 
-
 .main-body {
-  flex-grow: 1;
+  width: 77%;
   margin-right: 0.6rem;
   position: relative;
 }
 
 .right-sidebar {
   background-color: #E2E2EA;
-  width: 16rem;
   margin-right: -0.6rem;
   padding-left: 0.5rem;
+  width: 22%;
 }
 
 .workspace-container {
   display: flex;
   justify-content: space-between;
-  width: 100%;
-  flex-grow: 1;
+  align-items: stretch;
   height: calc(100% - 60px);
 }
 
@@ -155,7 +151,7 @@ app-workspace-nav-bar {
 
 .research-purpose-items {
   margin-top: 1rem;
-  width: 50rem;
+  width: 89%;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
