--- a/ui/src/app/cohort-search/overview/overview.component.html
+++ b/ui/src/app/cohort-search/overview/overview.component.html
@@ -6,7 +6,7 @@
         Loading...
       </span>
       <span *ngIf="!(isRequesting$ | async)">
-        {{ total$ | async }}
+        {{ total$ | async | number }}
       </span>
     </h2>
     <div>
