--- a/ui/src/app/cohort-search/search-group/search-group.component.html
+++ b/ui/src/app/cohort-search/search-group/search-group.component.html
@@ -54,7 +54,7 @@
       Loading...
     </span>
     <span *ngIf="!isRequesting">
-    {{ group.get('count') || 0 }}
+    {{ group.get('count') || 0 | number }}
     </span>
   </div>
 
