--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -47,7 +47,7 @@
       </button>
       Number Participants:
       <span *ngIf="!preview.get('requesting')">
-        {{ preview.get('count', 0) }}
+        {{ preview.get('count', 0) | number }}
       </span>
       <span *ngIf="preview.get('requesting')" class="spinner spinner-inline">
         Loading...
