[RW-901][risk=no] Add RXnorm Code next to drug name (#1080)
* RW-901 add codes to bottom level children on drugs tree

* RW-901 add thousands comma separator for counts in tree

* RW-901 format all counts with thousands separators

* RW-1146 fixing a few minor bugs with labs api call. (#1081)

* RW-901 add codes to bottom level children on drugs tree

* RW-901 add thousands comma separator for counts in tree

* RW-901 format all counts with thousands separators

--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -31,7 +31,7 @@
     <span class="text-muted">&#124;</span>
     <span class="badge badge-info">
       <span *ngIf="node.get('group')">~</span>
-      {{ node.get('count', 0) }}
+      {{ node.get('count', 0) | number }}
     </span>
   </div>
 </div>
