--- a/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
+++ b/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
@@ -4,8 +4,8 @@
   </span>
 </div>
 
-<div class="row concept-charts chart"  >
-  <div class="col-md-4 col-xs-12" *ngIf="showGender && genderAnalysis"  >
+<div *ngIf="!loading && concept.domainId !== 'Measurement'" class="row concept-charts chart">
+  <div class="col-md-4 col-xs-12 chart" *ngIf="showGender && genderAnalysis"  >
     <app-chart [analysis]="genderAnalysis" [backgroundColor]="backgroundColor"> </app-chart>
   </div>
   <div class="col-md-4 col-xs-12 chart" *ngIf="showAge && ageAnalysis" >
@@ -14,5 +14,21 @@
 
   <div class="col-md-4 col-xs-12 chart"  *ngIf="showSources && ageAnalysis && sourceConcepts && sourceConcepts.length">
     <app-chart [concepts]="sourceConcepts" [sources]="true" [pointWidth]="20" [backgroundColor]="backgroundColor" [chartTitle]="'Sources'"> </app-chart>
+  </div>
+</div>
+
+<div *ngIf="!loading && concept.domainId === 'Measurement' && genderAnalysis" class="row concept-charts chart">
+  <div class="col-md-4 col-xs-12 chart" *ngFor="let gender of genderAnalysis.results;">
+    <app-chart *ngIf="gender.stratum2 === MALE_GENDER_ID && analyses && analyses.measurementValueMaleAnalysis"
+               [chartType]="'histogram'" [chartTitle]="makeChartTitle(gender)"
+               [analysis]="analyses.measurementValueMaleAnalysis"></app-chart>
+
+    <app-chart *ngIf="gender.stratum2 === FEMALE_GENDER_ID && analyses && analyses.measurementValueFemaleAnalysis"
+               [chartType]="'histogram'" [chartTitle]="makeChartTitle(gender)" [chartType]="column"
+               [analysis]="analyses.measurementValueFemaleAnalysis"></app-chart>
+
+    <app-chart *ngIf="gender.stratum2 === OTHER_GENDER_ID && analyses && analyses.measurementValueOtherGenderAnalysis"
+               [chartTitle]="makeChartTitle(gender)" [chartType]="column" [analysis]="analyses.measurementValueOtherGenderAnalysis"></app-chart>
+
   </div>
 </div>
