--- a/public-ui/src/app/views/pm/pm.component.html
+++ b/public-ui/src/app/views/pm/pm.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-8">
+  <div class="col-xs-12 col-sm-12 col-md-9">
 
     <div class="page-header">
       <div>
@@ -22,18 +22,25 @@
           <button *ngFor="let c of selectedGroup.concepts" (click)="showMeasurement(selectedGroup, c)" class="btn">{{c.conceptName}}</button>
         </div>
       </div>
-      <div class="row" *ngIf="selectedConcept.analyses.genderAnalysis" >
 
+      <div class="row" *ngIf="selectedConcept.analyses.genderAnalysis" >
         <!-- Loop through the genders we have results for showing the graph -->
         <div *ngFor="let gender of selectedConcept.analyses.genderAnalysis.results;">
           <div *ngIf="gender.stratum2 === MALE_GENDER_ID && selectedConcept.analyses && selectedConcept.analyses.measurementValueMaleAnalysis" class="col-md-4 col-xs-12 chart-wrapper">
-            <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="'histogram'" [analysis]="selectedConcept.analyses.measurementValueMaleAnalysis"></app-chart>
+            <div class="chart-wrapper">
+              <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="selectedConcept.chartType" [analysis]="selectedConcept.analyses.measurementValueMaleAnalysis"></app-chart>
+            </div>
           </div>
-          <div *ngIf="gender.stratum2 === FEMALE_GENDER_ID && selectedConcept.analyses && selectedConcept.analyses.measurementValueFemaleAnalysis" class="col-md-4 col-xs-12 chart-wrapper">
-            <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="selectedConcept.chartType" [analysis]="selectedConcept.analyses.measurementValueFemaleAnalysis"></app-chart>
+          <div *ngIf="gender.stratum2 === FEMALE_GENDER_ID && selectedConcept.analyses && selectedConcept.analyses.measurementValueFemaleAnalysis" class="col-md-4
+           col-xs-12 chart-wrapper">
+            <div class="chart-wrapper">
+              <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="selectedConcept.chartType" [analysis]="selectedConcept.analyses.measurementValueFemaleAnalysis"></app-chart>
+            </div>
           </div>
           <div *ngIf="gender.stratum2 === OTHER_GENDER_ID && selectedConcept.analyses && selectedConcept.analyses.measurementValueOtherGenderAnalysis" class="col-md-4 col-xs-12 chart-wrapper">
-            <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="selectedConcept.chartType" [analysis]="selectedConcept.analyses.measurementValueOtherGenderAnalysis"></app-chart>
+            <div class="chart-wrapper">
+              <app-chart [chartTitle]="makeChartTitle(gender)" [chartType]="selectedConcept.chartType" [analysis]="selectedConcept.analyses.measurementValueOtherGenderAnalysis"></app-chart>
+            </div>
           </div>
         </div>
       </div>
@@ -46,5 +53,9 @@
         </a>
       </p>
     </div>
+
+  </div>
+  <div class="col-xs-12 col-sm-12 col-md-3">
+    <img [src]="pageImage" />
   </div>
 </div>
