RW-1088, RW-1089, RW-1090 changes according to review

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -72,7 +72,7 @@
       <div>
         Number Participants:
         <span class="text-bold" *ngIf="!preview.get('requesting')">
-             {{ preview.get('count', 0) }}
+             {{ preview.get('count', 0) | number}}
         </span>
       </div>
     </div>
