--- a/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
+++ b/ui/src/app/cohort-search/attributes-page/attributes-page.component.html
@@ -67,7 +67,7 @@
            <div >
               Number Participants:
              <span class="text-bold" *ngIf="!preview.get('requesting')">
-             {{ preview.get('count', 0) }}
+             {{ preview.get('count', 0)  | number }}
              </span>
           </div>
         </div>
