--- a/ui/src/app/cohort-search/modal/modal.component.css
+++ b/ui/src/app/cohort-search/modal/modal.component.css
@@ -160,8 +160,7 @@ button.tab.active {
 }
 
 .panel-right.selected {
-  width: 14rem;
-  min-width: 14rem;
+  width: 95%;
   border: 2px solid #262262;
   height: 100%;
   border-radius: 5px;
