--- a/ui/src/app/cohort-review/detail-page/detail-page.css
+++ b/ui/src/app/cohort-review/detail-page/detail-page.css
@@ -1,12 +1,25 @@
+/*.detail-sidebar {*/
+  /*position: absolute;*/
+  /*top: 1px;*/
+  /*right: 0px;*/
+  /*border: 1px solid rgb(86, 86, 86);*/
+  /*border-radius: 2px;*/
+  /*height: 100%;*/
+  /*z-index: 1;*/
+  /*background-color: rgb(250, 250, 250);*/
+  /*display: flex;*/
+  /*margin-right: -0.6rem;*/
+/*}*/
+
 .detail-sidebar {
   position: absolute;
   top: 1px;
   right: 0px;
-  border: 1px solid rgb(86, 86, 86);
+  /*border: 1px solid rgb(86, 86, 86);*/
   border-radius: 2px;
   height: 100%;
   z-index: 1;
-  background-color: rgb(250, 250, 250);
+  /*background-color: rgb(250, 250, 250);*/
   display: flex;
   margin-right: -0.6rem;
 }
@@ -31,9 +44,16 @@
   transition: 0.5s;
   overflow-x: hidden;
   flex: 1;
+  padding:0.35rem;
 }
 
 .sidebar-content.sidebar-open {
   margin-left: 0.25rem;
   width: 300px;
 }
+/*.detail-sidebar::before {*/
+  /*content: "\00BB";*/
+  /*background-color: yellow;*/
+  /*color: red;*/
+  /*font-weight: bold;*/
+/*}*/
