--- a/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.css
+++ b/ui/src/app/cohort-review/sidebar-content/sidebar-content.component.css
@@ -8,12 +8,13 @@
 
 .demographics-info {
   color: #111;
-  padding-top: 0.25rem;
+  margin-bottom: 1.5rem;
 }
 
 .sidebar-content .participant-color {
   color: #478EBA;
   font-weight: bold;
+  padding-bottom: 0.3rem;
 }
 
 .sidebar-content .participant-info {
