--- a/ui/src/app/cohort-review/participant-status/participant-status.component.html
+++ b/ui/src/app/cohort-review/participant-status/participant-status.component.html
@@ -2,6 +2,25 @@
   <label for="status-selector">
     Choose a Review Status for Participant {{ participant.id }}
   </label>
+  <!--<div>-->
+    <!--<clr-dropdown >-->
+      <!--<button type="button" class="btn btn-outline" clrDropdownTrigger>-->
+        <!--&lt;!&ndash;<span *ngIf = "dropdownOption.selected[i] !== ''; else elseBlock">{{dropdownOption.selected[i]}}</span>&ndash;&gt;-->
+        <!--&lt;!&ndash;<ng-template #elseBlock>&ndash;&gt;-->
+          <!--&lt;!&ndash;<span>Select Operator</span>&ndash;&gt;-->
+        <!--&lt;!&ndash;</ng-template>&ndash;&gt;-->
+        <!--<clr-icon shape="caret down"></clr-icon>-->
+      <!--</button>-->
+      <!--&lt;!&ndash;<clr-dropdown-menu  clrPosition="bottom-left" *clrIfOpen>&ndash;&gt;-->
+        <!--&lt;!&ndash;<button&ndash;&gt;-->
+                <!--&lt;!&ndash;*ngFor="let status of cohortStatusList"&ndash;&gt;-->
+                <!--&lt;!&ndash;[value]="status.value"&ndash;&gt;-->
+                <!--&lt;!&ndash;class="dropdown-item"&ndash;&gt;-->
+                <!--&lt;!&ndash;type="button"&ndash;&gt;-->
+                <!--&lt;!&ndash;clrDropdownItem>{{status.display}}</button>&ndash;&gt;-->
+      <!--&lt;!&ndash;</clr-dropdown-menu>&ndash;&gt;-->
+    <!--&lt;!&ndash;</clr-dropdown>&ndash;&gt;-->
+  <!--</div>-->
   <div class="select">
   <select [formControl]="statusControl">
     <option *ngFor="let status of cohortStatusList" [value]="status.value">
