--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -5,12 +5,11 @@
 <div class="card-area">
   <div *ngIf="!cohortsLoading">
     <div role="tooltip" aria-haspopup="true" class="card add-card tooltip tooltip-md tooltip-top-right"
-         [class.disabled]="awaitingReview || !writePermission" (click)="awaitingReview || !writePermission || buildCohort()">
+         [class.disabled]="!writePermission" (click)="!writePermission || buildCohort()">
       <div class="create-text">
         Create a <br/>New Cohort
         <clr-icon shape="plus-circle" class="plus-circle"></clr-icon>
       </div>
-      <span *ngIf="awaitingReview" class="tooltip-content">Workspace is awaiting review</span>
       <span *ngIf="!writePermission" class="tooltip-content">Write permission required to create cohorts</span>
     </div>
   </div>
