--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -8,9 +8,8 @@
     <h2 class="greeting">{{showTip ? 'Get Started' : 'Recent Work'}}</h2>
     <div style="width: 200px">
       <div role="tooltip" aria-haspopup="true" class="tooltip tooltip-md tooltip-top-right">
-        <span *ngIf="awaitingReview" class="tooltip-content">Workspace is awaiting review</span>
         <span *ngIf="!writePermission" class="tooltip-content">Write permission required to create cohorts</span>
-        <div class="card add-card" [ngClass]="{'disabled' : !writePermission || awaitingReview}" (click)="!writePermission || awaitingReview || buildCohort()">
+        <div class="card add-card" [ngClass]="{'disabled' : !writePermission}" (click)="!writePermission || buildCohort()">
           <div class="create-text">
             Create a <br/>New Cohort
             <clr-icon shape="plus-circle" class="plus-circle"></clr-icon>
@@ -18,9 +17,8 @@
         </div>
       </div>
       <div role="tooltip" aria-haspopup="true" class="tooltip tooltip-md tooltip-top-right">
-        <span *ngIf="awaitingReview" class="tooltip-content">Workspace is awaiting review</span>
         <span *ngIf="!writePermission" class="tooltip-content">Write permission required to create notebooks</span>
-        <div class="card add-card" [ngClass]="{'disabled' : !writePermission || awaitingReview}" style="margin-top: 13px;" (click)="!writePermission || awaitingReview || newNotebook()">
+        <div class="card add-card" [ngClass]="{'disabled' : !writePermission }" style="margin-top: 13px;" (click)="!writePermission || newNotebook()">
           <div class="create-text">
             Create a<br/>New Notebook
             <clr-icon shape="plus-circle" class="plus-circle"></clr-icon>
