RW-1092 particiapnt right bar arrow fixes

--- a/ui/src/app/cohort-review/annotation-list/annotation-list.component.html
+++ b/ui/src/app/cohort-review/annotation-list/annotation-list.component.html
@@ -1,16 +1,16 @@
-<div>
-  <h4>Annotations</h4>
-  <clr-checkbox
-    [clrInline]="true"
-    [(clrChecked)]="showDataType"
-    [name]="'show-data-type'">
-    Show Type
-  </clr-checkbox>
+<div class="annotations-container">
+  <h4 class="annotations-color">Annotations</h4>
+  <!--<clr-checkbox-->
+    <!--[clrInline]="true"-->
+    <!--[(clrChecked)]="showDataType"-->
+    <!--[name]="'show-data-type'">-->
+    <!--Show Type-->
+  <!--</clr-checkbox>-->
   <button
     type="button"
     class="btn btn-icon btn-link"
     (click)="openManager()">
-    <clr-icon shape="cog" size="24" title="Manage Annotations"></clr-icon>
+    <clr-icon shape="cog" class="is-solid" size="24" title="Manage Annotations"></clr-icon>
   </button>
 </div>
 
