--- a/ui/src/app/cohort-review/detail-page/detail-page.css
+++ b/ui/src/app/cohort-review/detail-page/detail-page.css
@@ -1,16 +1,3 @@
-/*.detail-sidebar {*/
-  /*position: absolute;*/
-  /*top: 1px;*/
-  /*right: 0px;*/
-  /*border: 1px solid rgb(86, 86, 86);*/
-  /*border-radius: 2px;*/
-  /*height: 100%;*/
-  /*z-index: 1;*/
-  /*background-color: rgb(250, 250, 250);*/
-  /*display: flex;*/
-  /*margin-right: -0.6rem;*/
-/*}*/
-
 .detail-sidebar {
   position: absolute;
   top: 1px;
@@ -22,11 +9,17 @@
   /*background-color: rgb(250, 250, 250);*/
   display: flex;
   margin-right: -0.6rem;
+
 }
 
 .sidebar-handle {
-  min-width: 24px;
-  background-color: rgb(230, 230, 230);
+  /*min-width: 24px;*/
+  background-color: #728FA3;
+  padding:0.6rem;
+  position: absolute;
+  margin-left: -2rem;
+  border-radius: 0.2rem;
+  top: 3rem;
 }
 
 .detail-page {
@@ -44,10 +37,17 @@
   transition: 0.5s;
   overflow-x: hidden;
   flex: 1;
-  padding:0.35rem;
+  padding-top:0.35rem;
 }
 
 .sidebar-content.sidebar-open {
+  margin-left: 0.25rem;
+  width: 383px;
+  border-left: 1rem solid #728FA3;
+  padding-left: 0.3rem;
+}
+
+.sidebar-handle.sidebar-open {
   margin-left: 0.25rem;
   width: 359px;
 }
@@ -57,3 +57,6 @@
   /*color: red;*/
   /*font-weight: bold;*/
 /*}*/
+.angle-icon {
+  color: white;
+}
