--- a/ui/src/app/cohort-review/participant-status/participant-status.component.css
+++ b/ui/src/app/cohort-review/participant-status/participant-status.component.css
@@ -1,6 +1,16 @@
-/*.participant-dropdown {*/
-    /*width:8rem;*/
-/*}*/
 .participant-dropdown.dropdown, .dropdown .dropdown-toggle {
     width:10rem;
+    margin-top: 0.2rem;
+    text-align: left;
+    margin-bottom: 0.4rem;
 }
+
+.btn-info-outline .btn, .btn-outline .btn, .btn.btn-info-outline, .btn.btn-outline, .btn.btn-outline-info, .btn.btn-outline .btn {
+    border : 1px solid #C3C3C3;
+    color: #4A4A4A;
+}
+
+.dropdown .dropdown-toggle.btn clr-icon[shape^=caret] {
+    color: #C3C3C3;
+}
+
